# sysadmin

./: .gitignore  Cargo.toml  Dockerfile  README.md  setup.py  sysadmin
monitor/: Cargo.toml
monitor/src/: bucket.rs  main.rs  nosj.rs  request.rs  response.rs  server.rs
monitor/web/: index.html
public/: hello.html
scripts/: sysadmin
src/: lib.rs  main.rs  modules.rs
src/lib/: config.rs
src/modules/: mod.rs  norm.rs  project_manager.rs  req.rs
src/modules/file_sharing/: http.rs  mod.rs
src/modules/file_sharing/lib/: http.rs  mod.rs  thread_pool.rs
src/modules/monitor/: lib.rs  main.rs
src/modules/norm/: lib.rs  main.rs  mod.rs
src/modules/project_manager/: lib.rs  mod.rs
sysadmin/: norm.py
tests/: norm.rs
